<resources>
    <string name="app_name" translatable="false">BasketCounter</string>
    <string name="left_team">Home</string>
    <string name="right_team">Guest</string>
    <string name="three_points">+3P</string>
    <string name="two_points">+2P</string>
    <string name="free_throw">FT</string>
    <string name="foul">Foul</string>
    <string name="reset">Reset</string>
    <string name="time_per_quarter">Time per quarter</string>
    <string name="bonus_situation">Bonus situation</string>
    <string name="confirm">Confirm</string>
    <string name="team_A">Team A</string>
    <string name="team_B">Team B</string>
    <string name="minutes_label">mins</string>
    <string name="fouls_label">fouls</string>

    <!--
         Test ad unit ids
        <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
        <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    -->

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7487555387883892/4032105080</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-7487555387883892/1389949359</string>

    <string name="ADMOB_APP_ID" translatable="false">ca-app-pub-7487555387883892~3043909438</string>
    <string name="save_match" translatable="false">Save match</string>
    <string name="game_saved">Match saved!</string>
    <string name="error_saving_game">Error trying to save the match!</string>
    <string name="game_icon_description" translatable="false">Game icon</string>
    <string name="vs" translatable="false">VS</string>
    <string name="match_clicked" translatable="false">match_clicked</string>
    <string name="won">won!</string>
    <string name="draw">Was a draw!</string>
    <string name="first_quarter">1Q</string>
    <string name="quarter">Q</string>
    <string name="over_time">OT</string>
    <string name="delete_game" translatable="false">Delete match</string>
    <string name="game_deleted">Match deleted!</string>
    <string name="facebook_app_id" translatable="false">255224438632587</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb255224438632587</string>
    <string name="action_cannot_be_executed">The action cannot be executed at this time. Please try again later.</string>
    <string name="connect_to_internet">Please connect to the internet to continue.</string>
    <string name="share_match" translatable="false">share_match</string>
    <string name="result">Result</string>
    <string name="final_result">Final result</string>
    <string name="match_to_save" translatable="false">match_to_save</string>
    <string name="match_to_delete" translatable="false">match_to_delete</string>
    <string name="database_error">Database error!</string>
</resources>
