<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/date_details_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:textSize="@dimen/team_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_right_team_details"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="12/10/1900" />

    <TextView
        android:id="@+id/tv_left_team_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:background="@color/colorPrimaryLight"
        android:gravity="center_horizontal"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingBottom="@dimen/small_margin"
        android:paddingTop="@dimen/small_margin"
        android:text="@string/left_team"
        android:textColor="@color/text_black"
        android:textSize="@dimen/team_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_score_left_details"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_right_team_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:background="@color/colorPrimaryLight"
        android:gravity="center_horizontal"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingBottom="@dimen/small_margin"
        android:paddingTop="@dimen/small_margin"
        android:text="@string/right_team"
        android:textColor="@color/text_black"
        android:textSize="@dimen/team_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_score_right_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <TextView
        android:id="@+id/tv_score_left_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:text="0"
        android:textColor="@color/text_black"
        android:textSize="@dimen/score_display"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/tv_left_team_details"
        app:layout_constraintStart_toStartOf="@+id/tv_left_team_details" />

    <TextView
        android:id="@+id/tv_score_right_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:text="0"
        android:textColor="@color/text_black"
        android:textSize="@dimen/score_display"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/tv_right_team_details"
        app:layout_constraintStart_toStartOf="@+id/tv_right_team_details" />

    <TextView
        android:id="@+id/winner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:text="Home won!" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner_text">

    </com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>